Working game for RPS

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,66 @@
     <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1 class="hello-world"></h1>
+    <header class="header">
+      <ul>
+        <li class="RPS">Rock, Paper, Scissors</li>
+        <li class="reset">Reset</li>
+      </ul>
+    </header>
+    <h1></h1>
+    <main>
+      <div class="teamname1">
+        <h2>Team 1</h2>
+        <div class="Player">
+          <img
+            class="handP1"
+            id="handP1"
+            src="https://media.giphy.com/media/ZNo3OCM9CoEVz71ilQ/giphy.gif"
+            alt="Player 1 hand"
+          />
+          <ul class="choice">
+            <li>
+              <p class="rockP1">🗿</p>
+            </li>
+            <li>
+              <p class="paperP1">🧻</p>
+            </li>
+            <li>
+              <p class="scissorsP1">✂️</p>
+            </li>
+          </ul>
+        </div>
+        <input class="one" type="text" placeholder="Name" />
+      </div>
+      <div class="teamname2">
+        <h2>Team 2</h2>
+        <div class="Player">
+          <img
+            class="handP2"
+            id="handP2"
+            src="https://media.giphy.com/media/ZNo3OCM9CoEVz71ilQ/giphy.gif"
+            alt="Player 2 hand"
+          />
+          <ul class="choice">
+            <li>
+              <p class="rockP2">🗿</p>
+            </li>
+            <li>
+              <p class="paperP2">🧻</p>
+            </li>
+            <li>
+              <p class="scissorsP2">✂️</p>
+            </li>
+          </ul>
+        </div>
+        <input class="one" type="text" placeholder="Name" />
+      </div>
+    </main>
+    <footer>
+      <div class="restartButton">
+        <p>Shoot</p>
+      </div>
+    </footer>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
