working RPS with spock and lizard

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,12 @@
             <li>
               <p class="scissorsP1">✂️</p>
             </li>
+            <li>
+              <p class="spockP1">🖖🏻</p>
+            </li>
+            <li>
+              <p class="lizardP1">🦎</p>
+            </li>
           </ul>
         </div>
         <input class="one" type="text" placeholder="Name" />
@@ -57,6 +63,12 @@
             </li>
             <li>
               <p class="scissorsP2">✂️</p>
+            </li>
+            <li>
+              <p class="spockP2">🖖🏻</p>
+            </li>
+            <li>
+              <p class="lizardP2">🦎</p>
             </li>
           </ul>
         </div>
