--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <ul>
-        <li class="RPS">Rock, Paper, Scissors</li>
+        <li class="RPS">Rock, Paper, Scissors, Lizard, Spock</li>
         <li class="reset">Reset</li>
       </ul>
     </header>
